argocd/applications/timeapi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeapi
spec:
  selector:
    matchLabels:
      app: timeapi
  template:
    metadata:
      labels:
        app: timeapi
    spec:
      containers:
      - name: timeapi
        image: ghcr.io/netgroup-polito/cloudprog-2025/timeapi
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
