argocd/applications/timeapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: timeapi
spec:
  selector:
    app: timeapi
  ports:
  - port: 8080
    targetPort: 8080
